# AnkiJSApi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NOTICE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING_QUICKREF.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: license-check.yml  release.yml  test.yml
.hypothesis/constants/: 08bd68bf44698814  0d7c50d31dc7a687  0ee19b8c059e88e7  2a27b49358975855  39e1f6f64eedbf3d  420a577d8784b523  47a3ace80f89aa53  49cc9ded44775383  5359f236345461c2  5a2e032fd13f9a6d  626ccb1c241d1f66  631bdc40a9669087  65bd48680825e5fa  66a6c13d8eb49a33  81821995936e183d  8347d56c853448e9  99edf829a9aae5c4  b0d5c2d23b7e9f2b  b10724927f121a84  bbaaadee8a392104  c7bb1ab7d550dd1f  d49b1b583c9dffb0  f9736eadfcdce8f3  fc7eed6a2b1ff344
.hypothesis/tmp/: tmp13481qii  tmp1fov18vt  tmp1qj05kte  tmp2cubnzf5  tmp2tze5qaj  tmp3ibg4l06  tmp3in1j0hk  tmp45sfwacm  tmp5v95uanp  tmp76qh0yj4  tmp8h1q63kg  tmp8h5ek0at  tmpde7wf7rz  tmpf9qo3_am  tmphojr9omu  tmphoplp28p  tmpk7bclggs  tmpkbcgl1em  (+11 more)
docs/: ANKIDROID_TEMPLATE_API.md  ANKI_DESKTOP_TEMPLATE_API.md  API_EVOLUTION.md  ARCHITECTURE_REVIEW.md  CODE_IMPROVEMENTS_SUMMARY.md  CODE_REVIEW_BEST_PRACTICES.md  COMPLEXITY_ANALYSIS.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_REVIEW.md  ERROR_HANDLING_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  LICENSE_COMPLIANCE.md  MAINTAINABILITY.md  PERFORMANCE_OPTIMIZATIONS.md  README_SPHINX.md  TESTABILITY_IMPROVEMENTS.md  TESTING.md  TESTING_IMPLEMENTATION.md  architecture.rst  changelog.rst  conf.py  contributing.rst  development.rst  examples.rst  faq.rst  index.rst  installation.rst  license.rst  quickstart.rst  testing.rst  usage.rst
scripts/: add_license_headers.py
tests/: conftest.py  test_addon_package.py  test_api_bridge.py  test_architecture.py  test_benchmarks.py  test_card_actions.py  test_card_info.py  test_integration.py  test_javascript_api.html  test_property_based.py  test_reviewer_control.py  test_security.py  test_tag_manager.py  test_tts_control.py  test_ui_control.py  test_utils.py
(+23 files in other folders)
